Added scraping of icons

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -184,6 +184,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da024a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_file(url, filepath):\n",
+    "    rsp = requests.get(url)\n",
+    "    rsp.raise_for_status()\n",
+    "    Path(str(filepath)).write_bytes(rsp.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "acc9b6b3",
    "metadata": {},
    "outputs": [],
@@ -255,29 +268,28 @@
     "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    missing_item_xml_urls = {}\n",
     "    for item_id in itemlist_datas['item_id']:\n",
-    "        filepath = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
-    "        if not filepath.exists():\n",
-    "            missing_item_xml_urls[f\"{root_url}/item={item_id}&xml\"] = filepath\n",
+    "        filepath_jpg = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
+    "        if not filepath_jpg.exists():\n",
+    "            missing_item_xml_urls[f\"{root_url}/item={item_id}&xml\"] = filepath_jpg\n",
     "        else:\n",
-    "            item_xml_paths.append(filepath)\n",
+    "            item_xml_paths.append(filepath_jpg)\n",
     "    \n",
     "    while len(missing_item_xml_urls) > 0:\n",
     "        futures = {}\n",
-    "        for url in tqdm(iterable=missing_item_xml_urls.keys(), desc=\"Starting download item XML futures\", leave=False, total=len(missing_item_xml_urls)):\n",
-    "            futures[executor.submit(requests.get, url)] = url\n",
+    "        for url, filepath_jpg in tqdm(iterable=missing_item_xml_urls.items(), desc=\"Starting download item XML futures\", leave=False, total=len(missing_item_xml_urls)):\n",
+    "            futures[executor.submit(download_file, url, filepath_jpg)] = url\n",
     "\n",
     "        for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
     "            url = futures[f]\n",
-    "            filepath = missing_item_xml_urls[url]\n",
+    "            filepath_jpg = missing_item_xml_urls[url]\n",
     "            try:\n",
     "                rsp = f.result()\n",
     "                rsp.raise_for_status()\n",
     "            except:\n",
     "                pass\n",
     "            else:\n",
-    "                filepath.write_bytes(rsp.content)\n",
-    "                item_xml_paths.append(filepath)\n",
     "                missing_item_xml_urls.pop(url, None)\n",
+    "                item_xml_paths.append(filepath_jpg)\n",
     "\n",
     "item_xml_paths = pd.Series(item_xml_paths)\n",
     "item_xml_paths"
@@ -293,10 +305,14 @@
     "# parsing item XML\n",
     "json_dir = Path(output_dir + \"/itemjson\")\n",
     "json_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "jsonequip_dir = Path(output_dir + \"/jsonequip\")\n",
     "jsonequip_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "def parse_item_xml(path, overwrite_json=False):\n",
+    "htmltooltip_dir = Path(output_dir + \"/htmltooltip\")\n",
+    "htmltooltip_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "def parse_item_xml(path, overwrite=False):\n",
     "    root = ET.parse(path).find(\".//item\")\n",
     "    class_elem = root.find(\"class\")\n",
     "    subclass_elem = root.find(\"subclass\")\n",
@@ -317,20 +333,25 @@
     "        \"icon_name\": icon_elem.text,\n",
     "        \"inventorySlot_id\": int(inventorySlot_elem.attrib['id']),\n",
     "        \"inventorySlot_name\": inventorySlot_elem.text,\n",
-    "        \"htmlTooltip\": root.findtext(\"htmlTooltip\"),\n",
     "        \"link\": root.findtext(\"link\")\n",
     "    }\n",
     "    json_str = root.findtext(\"json\")\n",
     "    if (json_str):\n",
     "        json_filepath = json_dir.joinpath(\"{}.json\".format(parsedItem['id']))\n",
-    "        if(not json_filepath.exists() or overwrite_json):\n",
+    "        if(not json_filepath.exists() or overwrite):\n",
     "            json_filepath.write_text('{' + json_str + '}')\n",
     "\n",
     "    jsonequip_str = root.findtext(\"jsonEquip\")\n",
     "    if (jsonequip_str):         \n",
-    "            jsonequip_filepath = jsonequip_dir.joinpath(\"{}.equip.json\".format(parsedItem['id']))\n",
-    "            if(not jsonequip_filepath.exists() or overwrite_json):\n",
-    "                jsonequip_filepath.write_text('{' + jsonequip_str + '}')\n",
+    "        jsonequip_filepath = jsonequip_dir.joinpath(\"{}.equip.json\".format(parsedItem['id']))\n",
+    "        if(not jsonequip_filepath.exists() or overwrite):\n",
+    "            jsonequip_filepath.write_text('{' + jsonequip_str + '}')\n",
+    "\n",
+    "    htmltooltip_str = root.findtext('htmlTooltip')\n",
+    "    if (htmltooltip_str):\n",
+    "        htmltooltip_filepath = htmltooltip_dir.joinpath(\"{}.htm\".format(parsedItem['id']))\n",
+    "        if(not htmltooltip_filepath.exists() or overwrite):\n",
+    "            htmltooltip_filepath.write_text(htmltooltip_str)\n",
     "    return parsedItem\n",
     "\n",
     "fail_count = 0\n",
@@ -344,7 +365,55 @@
     "            fail_count += 1\n",
     "        else:\n",
     "            parsed_item_xml.append(fres)\n",
-    "items = pd.DataFrame.from_records(parsed_item_xml, index='id')"
+    "\n",
+    "items = pd.DataFrame.from_records(parsed_item_xml, index='id')\n",
+    "items.to_csv(output_dir + \"/items.csv\", sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fd1c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape and download icons\n",
+    "icon_dir = Path(output_dir + \"/icons\")\n",
+    "icon_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "icon_filepaths = []\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    missing_icons = {}\n",
+    "    for icon_name in tqdm(iterable=items['icon_name'], desc=\"Collecting missing icons\", leave=False):\n",
+    "        filepath_jpg = icon_dir.joinpath(f\"{icon_name}.jpg\").absolute()\n",
+    "        if not filepath_jpg.exists():\n",
+    "            missing_icons[f'https://wow.zamimg.com/images/wow/icons/large/{icon_name}.jpg'] = filepath_jpg\n",
+    "        else:\n",
+    "            icon_filepaths.append(filepath_jpg)\n",
+    "\n",
+    "        filepath_png = icon_dir.joinpath(f\"{icon_name}.png\").absolute()\n",
+    "        if not filepath_png.exists():\n",
+    "            missing_icons[f'https://wow.zamimg.com/images/wow/icons/large/{icon_name}.png'] = filepath_png\n",
+    "        else:\n",
+    "            icon_filepaths.append(filepath_png)\n",
+    "    \n",
+    "    while len(missing_icons) > 0:\n",
+    "        futures = {}\n",
+    "        for url, filepath_jpg in tqdm(iterable=missing_icons.items(), desc=\"Starting icon download futures\", leave=False, total=len(missing_icons)):\n",
+    "            futures[executor.submit(download_file, url, filepath_jpg)] = url\n",
+    "\n",
+    "        for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Icons\", total=len(futures), leave=False):\n",
+    "            url = futures[f]\n",
+    "            filepath_jpg = missing_icons[url]\n",
+    "            try:\n",
+    "                rsp = f.result()\n",
+    "                rsp.raise_for_status()\n",
+    "            except:\n",
+    "                pass\n",
+    "            else:\n",
+    "                icon_filepaths.append(filepath_jpg)\n",
+    "            finally:\n",
+    "                missing_icons.pop(url, None)"
    ]
   },
   {
@@ -360,7 +429,7 @@
     "            data[\"item_id\"] = int(Path(fp.stem).stem)\n",
     "            return data\n",
     "\n",
-    "jsonequips = []\n",
+    "jsonequips_wide = []\n",
     "\n",
     "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    futures = []\n",
@@ -368,12 +437,13 @@
     "        futures.append(executor.submit(parse_jsonequip, fp))\n",
     "\n",
     "    for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Parsing item jsonequips\", total=len(futures), leave=False):\n",
-    "        df = f.result()\n",
-    "        jsonequips.append(df)\n",
+    "        ds = f.result()\n",
+    "        jsonequips_wide.append(ds)\n",
     "\n",
-    "jsonequips = pd.DataFrame.from_records(jsonequips).drop(columns={'appearances','displayid'})\n",
-    "jsonequips.set_index('item_id', inplace=True)\n",
-    "jsonequips"
+    "jsonequips_wide = pd.DataFrame.from_records(jsonequips_wide).drop(columns={'appearances','displayid'}).sort_index()\n",
+    "jsonequips_wide.set_index('item_id', inplace=True)\n",
+    "jsonequips_wide.to_csv(output_dir + \"/jsonequips_wide.csv\", sep=';')\n",
+    "jsonequips_wide"
    ]
   },
   {
@@ -383,9 +453,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO Convert jsonequips to long format\n",
-    "temp3 = \"abc\"\n",
-    "print(f'{temp3=}')"
+    "# Convert jsonequips to long format\n",
+    "jsonequips_long = []\n",
+    "for item_id in jsonequips_wide.index:\n",
+    "    ds = jsonequips_wide.loc[item_id].dropna()\n",
+    "    for name in ds.index:\n",
+    "        value = ds[name]\n",
+    "        jsonequips_long.append(\n",
+    "            {\"item_id\": item_id, \"property\": name, \"value\": value}\n",
+    "        )\n",
+    "\n",
+    "jsonequips_long = pd.DataFrame.from_records(jsonequips_long, index='item_id').sort_index()\n",
+    "jsonequips_long.to_csv(output_dir + \"/jsonequips_long.csv\", sep=';')\n",
+    "jsonequips_long"
    ]
   },
   {
@@ -397,7 +477,7 @@
    "source": [
     "def get_weapon_dps(item_id):\n",
     "        try:\n",
-    "            row = jsonequips.loc[item_id]\n",
+    "            row = jsonequips_wide.loc[item_id]\n",
     "        except:\n",
     "            return pd.NA\n",
     "        else:\n",
