GRAPH WORK OOGA BOOGA

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -59,18 +59,13 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import shutil\n",
     "from tqdm import tqdm\n",
-    "import time\n",
     "import requests\n",
     "import xml.etree.ElementTree as ET\n",
     "import seaborn as sns\n",
     "import json\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
     "import os\n",
     "import re"
    ]
@@ -153,16 +148,6 @@
    "source": [
     "# close selenium web driver since we're done using it\n",
     "driver.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a045058",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item_qualities_palette = sns.color_palette(item_qualities['color'])"
    ]
   },
   {
@@ -268,20 +253,20 @@
     "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    missing_item_xml_urls = {}\n",
     "    for item_id in itemlist_datas['item_id']:\n",
-    "        filepath_jpg = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
-    "        if not filepath_jpg.exists():\n",
-    "            missing_item_xml_urls[f\"{root_url}/item={item_id}&xml\"] = filepath_jpg\n",
+    "        filepath = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
+    "        if not filepath.exists():\n",
+    "            missing_item_xml_urls[f\"{root_url}/item={item_id}&xml\"] = filepath\n",
     "        else:\n",
-    "            item_xml_paths.append(filepath_jpg)\n",
+    "            item_xml_paths.append(filepath)\n",
     "    \n",
     "    while len(missing_item_xml_urls) > 0:\n",
     "        futures = {}\n",
-    "        for url, filepath_jpg in tqdm(iterable=missing_item_xml_urls.items(), desc=\"Starting download item XML futures\", leave=False, total=len(missing_item_xml_urls)):\n",
-    "            futures[executor.submit(download_file, url, filepath_jpg)] = url\n",
+    "        for url, filepath in tqdm(iterable=missing_item_xml_urls.items(), desc=\"Starting download item XML futures\", leave=False, total=len(missing_item_xml_urls)):\n",
+    "            futures[executor.submit(download_file, url, filepath)] = url\n",
     "\n",
     "        for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
     "            url = futures[f]\n",
-    "            filepath_jpg = missing_item_xml_urls[url]\n",
+    "            filepath = missing_item_xml_urls[url]\n",
     "            try:\n",
     "                rsp = f.result()\n",
     "                rsp.raise_for_status()\n",
@@ -289,7 +274,7 @@
     "                pass\n",
     "            else:\n",
     "                missing_item_xml_urls.pop(url, None)\n",
-    "                item_xml_paths.append(filepath_jpg)\n",
+    "                item_xml_paths.append(filepath)\n",
     "\n",
     "item_xml_paths = pd.Series(item_xml_paths)\n",
     "item_xml_paths"
@@ -367,7 +352,8 @@
     "            parsed_item_xml.append(fres)\n",
     "\n",
     "items = pd.DataFrame.from_records(parsed_item_xml, index='id')\n",
-    "items.to_csv(output_dir + \"/items.csv\", sep=';')"
+    "#items.to_csv(output_dir + \"/items.csv\", sep=';')\n",
+    "items.to_parquet(output_dir + \"/items.parquet\")"
    ]
   },
   {
@@ -385,33 +371,27 @@
     "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    missing_icons = {}\n",
     "    for icon_name in tqdm(iterable=items['icon_name'], desc=\"Collecting missing icons\", leave=False):\n",
-    "        filepath_jpg = icon_dir.joinpath(f\"{icon_name}.jpg\").absolute()\n",
-    "        if not filepath_jpg.exists():\n",
-    "            missing_icons[f'https://wow.zamimg.com/images/wow/icons/large/{icon_name}.jpg'] = filepath_jpg\n",
+    "        filepath = icon_dir.joinpath(f\"{icon_name}.jpg\").absolute()\n",
+    "        if not filepath.exists():\n",
+    "            missing_icons[f'https://wow.zamimg.com/images/wow/icons/large/{icon_name}.jpg'] = filepath\n",
     "        else:\n",
-    "            icon_filepaths.append(filepath_jpg)\n",
-    "\n",
-    "        filepath_png = icon_dir.joinpath(f\"{icon_name}.png\").absolute()\n",
-    "        if not filepath_png.exists():\n",
-    "            missing_icons[f'https://wow.zamimg.com/images/wow/icons/large/{icon_name}.png'] = filepath_png\n",
-    "        else:\n",
-    "            icon_filepaths.append(filepath_png)\n",
+    "            icon_filepaths.append(filepath)\n",
     "    \n",
     "    while len(missing_icons) > 0:\n",
     "        futures = {}\n",
-    "        for url, filepath_jpg in tqdm(iterable=missing_icons.items(), desc=\"Starting icon download futures\", leave=False, total=len(missing_icons)):\n",
-    "            futures[executor.submit(download_file, url, filepath_jpg)] = url\n",
+    "        for url, filepath in tqdm(iterable=missing_icons.items(), desc=\"Starting icon download futures\", leave=False, total=len(missing_icons)):\n",
+    "            futures[executor.submit(download_file, url, filepath)] = url\n",
     "\n",
     "        for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Icons\", total=len(futures), leave=False):\n",
     "            url = futures[f]\n",
-    "            filepath_jpg = missing_icons[url]\n",
+    "            filepath = missing_icons[url]\n",
     "            try:\n",
     "                rsp = f.result()\n",
     "                rsp.raise_for_status()\n",
     "            except:\n",
     "                pass\n",
     "            else:\n",
-    "                icon_filepaths.append(filepath_jpg)\n",
+    "                icon_filepaths.append(filepath)\n",
     "            finally:\n",
     "                missing_icons.pop(url, None)"
    ]
@@ -440,9 +420,8 @@
     "        ds = f.result()\n",
     "        jsonequips_wide.append(ds)\n",
     "\n",
-    "jsonequips_wide = pd.DataFrame.from_records(jsonequips_wide).drop(columns={'appearances','displayid'}).sort_index()\n",
-    "jsonequips_wide.set_index('item_id', inplace=True)\n",
-    "jsonequips_wide.to_csv(output_dir + \"/jsonequips_wide.csv\", sep=';')\n",
+    "jsonequips_wide = pd.DataFrame.from_records(jsonequips_wide).drop(columns={'appearances','displayid'}).sort_values('item_id')\n",
+    "jsonequips_wide.to_parquet(output_dir + \"/jsonequips_wide.parquet\")\n",
     "jsonequips_wide"
    ]
   },
@@ -463,65 +442,9 @@
     "            {\"item_id\": item_id, \"property\": name, \"value\": value}\n",
     "        )\n",
     "\n",
-    "jsonequips_long = pd.DataFrame.from_records(jsonequips_long, index='item_id').sort_index()\n",
-    "jsonequips_long.to_csv(output_dir + \"/jsonequips_long.csv\", sep=';')\n",
+    "jsonequips_long = pd.DataFrame.from_records(jsonequips_long).sort_values('item_id')\n",
+    "jsonequips_long.to_parquet(output_dir + \"/jsonequips_long.parquet\")\n",
     "jsonequips_long"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e73b5b0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_weapon_dps(item_id):\n",
-    "        try:\n",
-    "            row = jsonequips_wide.loc[item_id]\n",
-    "        except:\n",
-    "            return pd.NA\n",
-    "        else:\n",
-    "            if pd.notna(row['dps']):\n",
-    "                return row['dps']\n",
-    "            if pd.notna(row['mledps']):\n",
-    "                print(\"used mledps\")\n",
-    "                return row['mledps']\n",
-    "            if pd.notna(row['rgddps']):\n",
-    "                print(\"used rgddps\")\n",
-    "                return row['rgddps']\n",
-    "            # TODO Calculate from damage and speed numbers if all else fails\n",
-    "            return pd.NA\n",
-    "\n",
-    "weapons = items[items['class_name'] == 'Weapons'][['subclass_name','name', 'level','quality_id','quality_name']].reset_index()\n",
-    "weapons.rename(columns={'subclass_name':'subclass', 'quality_name':'quality', 'level':'item level', 'id':'item_id'}, inplace=True)\n",
-    "\n",
-    "weapons['quality_color'] = pd.Series([(lambda qid: item_qualities_palette[qid])(qid) for qid in weapons['quality_id']])\n",
-    "weapons['dps'] = pd.Series([get_weapon_dps(item_id) for item_id in weapons['item_id']])\n",
-    "weapons = weapons[weapons['dps'].notna()].sort_values('item_id', ascending=True).reset_index().drop(columns='index')\n",
-    "weapons"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d75a0b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weapons_by_subclass = {}\n",
-    "for subclass in weapons['subclass'].drop_duplicates().sort_values():\n",
-    "    weapons_by_subclass[subclass] = weapons[weapons['subclass'] == subclass]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a603e7d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.set_theme(rc={'figure.figsize':(16,9)})\n",
-    "sns.lineplot(data=weapons_by_subclass['Daggers'], x='item level',y='dps', hue='quality_color', legend=None, sort=True).set_title('Daggers')"
    ]
   }
  ],
