mere portfølge skrivning

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -63,7 +63,7 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "import requests\n",
-    "import xml.etree.ElementTree as ET\n",
+    "import xml.etree.ElementTree as ElementTree\n",
     "import seaborn as sns\n",
     "import json\n",
     "import os\n",
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "# Get Item list data\n",
-    "def process_itemlist(url):\n",
+    "def process_itemlist_url(url):\n",
     "    rsp = requests.get(url)\n",
     "    rsp.raise_for_status()\n",
     "    match_iter = re.findall(r\"WH\\.Gatherer\\.addData\\(.*?\\);\", rsp.text, re.MULTILINE)\n",
@@ -211,7 +211,7 @@
     "    fail_count = {u:0 for u in itemlist_ilvl_urls.values()}\n",
     "    while len(unprocessed) > 0:\n",
     "        urls = [u for u in unprocessed.keys()]\n",
-    "        futures = {executor.submit(process_itemlist, u):u for u in urls}\n",
+    "        futures = {executor.submit(process_itemlist_url, u):u for u in urls}\n",
     "        for f in tqdm(iterable=concurrent.futures.as_completed(futures),desc=\"Downloading itemlist data\", leave=False, total=len(futures)):\n",
     "            u = futures[f]\n",
     "            u_is_qualitylink = u.find(r'/quality:') >= 0\n",
@@ -298,7 +298,7 @@
     "htmltooltip_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "def parse_item_xml(path, overwrite=False):\n",
-    "    root = ET.parse(path).find(\".//item\")\n",
+    "    root = ElementTree.parse(path).find(\".//item\")\n",
     "    class_elem = root.find(\"class\")\n",
     "    subclass_elem = root.find(\"subclass\")\n",
     "    quality_elem = root.find(\"quality\")\n",
